# mdblueprint

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/lean-adjudicator/: AGENTS.md  config.toml
docs/: agent-contracts.md  architecture.md  github-integration.md  lean-repositories.md  lint.md  math-authoring.md  node-format.md  publisher-and-dag.md  reference-repos.md  skills.md  topic-model.md
docs/knowledge/: mdblueprint.yml
docs/knowledge/reviews/: lean_lsp_mcp_vs_heuristic_review.md  (+5 more)
examples/: subgame-perfect-equilibrium.md
plans/: heuristic-countercheck-methodology.md  lam0_le_mu0-audit.md  lean-countercheck-plan.md  lean-lsp-mcp-smoke-comparison.md  round3-failure-mode-deep-dive-mechanism_isDSIC.md  round3-full-text-comparison.md  round3-full-text-failure-modes.md  round3-node-theorem-crosswalk.md  round3-post-run-review.md
plans/econcslib-refactor-agent-dry-run/: README.md  run.sh
skills/: README.md
skills/mdblueprint-alignment-review/: SKILL.md
skills/mdblueprint-graph-refactor-review/: SKILL.md
skills/mdblueprint-kb-reasoning/: SKILL.md
skills/mdblueprint-lean-adjudicate/: SKILL.md
skills/mdblueprint-lean-audit/: SKILL.md
skills/mdblueprint-lean-blueprint-export/: SKILL.md
skills/mdblueprint-lean-countercheck/: SKILL.md
skills/mdblueprint-lean-dependency-extraction/: SKILL.md
skills/mdblueprint-lean-generation/: SKILL.md
skills/mdblueprint-lean-linking/: SKILL.md
skills/mdblueprint-lean-node-generation/: SKILL.md
skills/mdblueprint-lean-run-full/: SKILL.md
skills/mdblueprint-lean-theorem-extraction/: SKILL.md
skills/mdblueprint-lean-theorem-extraction-legacy/: SKILL.md
skills/mdblueprint-node-author/: SKILL.md
skills/mdblueprint-node-review/: SKILL.md
skills/mdblueprint-proof-fill/: SKILL.md
skills/mdblueprint-publish/: SKILL.md
skills/mdblueprint-source-extraction/: SKILL.md
skills/mdblueprint-source-proof-recovery/: SKILL.md
tests/: test_admission_pipeline.py  test_admit.py  test_agent_docs.py  test_blueprint_view.py  test_candidate_abandon.py  test_candidate_promote.py  test_candidate_spawn.py  test_check.py  test_config.py  test_context.py  test_context_pack.py  test_diagnostic.py  test_domain_neutrality.py  test_econcslib_gate.py  test_export.py  test_export_topic_routing.py  test_graph.py  test_graph_candidates.py  test_graph_navigation_docs.py  test_kb_lean_field_audit.py  test_latex_check.py  test_lean_alignment.py  test_lean_audit.py  test_lean_check.py  test_lean_countercheck.py  test_lean_index.py  test_lean_index_attribute_prefix.py  test_lean_index_signature_snippet.py  test_lean_link_candidates.py  test_lean_linking.py  test_lean_linking_docs.py  test_lean_links_publish.py  test_lean_reverse_autofix.py  test_lean_reverse_check.py  test_leangen_text_pipeline.py  test_lint_cache.py  test_lint_candidate_pairs.py  test_lint_fuzzy.py  test_lint_hierarchy.py  test_lint_lean_kind.py  (+30 more)
tests/fixtures/invalid/: cycle_a.md  (+6 more)
tools/knowledge/: admission_pipeline.py  admit.py  blueprint_view.py  candidate.py  candidate_layout.py  check.py  config.py  context.py  context_pack.py  econcslib_gate.py  export.py  graph.py  kb_lean_field_audit.py  latex_check.py  lean_alignment.py  lean_audit.py  lean_check.py  lean_countercheck.py  lean_countercheck_batch.py  lean_index.py  lean_link_candidates.py  lean_linking.py  lean_reverse_autofix.py  lean_reverse_check.py  lint.py  models.py  node_refs.py  parser.py  promote_via_plan.py  proof_fill.py  proof_repair.py  publish.py  refactor_countercheck.py  refactor_dry_run.py  refactor_pack.py  refactor_report_check.py  render_check.py  renderer.py  serve.py  stats.py  (+2 more)
tools/leangen/: __init__.py  common.py  extract_dependencies.py  extract_project.py  extract_theorems.py  generate_mdblueprint.py  generate_nodes.py  lean_runner.py  run_full.py  templates.py  text_extract.py  validate_theorem_inputs.py
(+79 files in other folders)
