[project]
name = "mdblueprint"
version = "0.1.0"
description = "Markdown-first blueprint system for mathematical knowledge bases"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
mdblueprint-check = "tools.knowledge.check:main"
mdblueprint-publish = "tools.knowledge.publish:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
