[project]
name = "mdblueprint"
version = "0.1.0"
description = "Markdown-first blueprint system for mathematical knowledge bases"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
browser = [
    "playwright>=1.48",
]
serve = [
    "flask>=3.0",
    "watchdog>=4.0",
]

[project.scripts]
mdblueprint-check = "tools.knowledge.check:main"
mdblueprint-publish = "tools.knowledge.publish:main"
mdblueprint-render-check = "tools.knowledge.render_check:main"
mdblueprint-econcslib-gate = "tools.knowledge.econcslib_gate:main"
mdblueprint-lean-alignment = "tools.knowledge.lean_alignment:main"
mdblueprint-lean-link-candidates = "tools.knowledge.lean_link_candidates:main"
mdblueprint-lean-linking = "tools.knowledge.lean_linking:main"
mdblueprint-lint = "tools.knowledge.lint:main"
mdblueprint-proof-fill = "tools.knowledge.proof_fill:main"
mdblueprint-serve = "tools.knowledge.serve:main"

[tool.setuptools.packages.find]
include = ["tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: end-to-end tests that drive real I/O (file watcher, HTTP, SSE)",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
